Mejoras en la interfaz de login

--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.css
@@ -3,6 +3,7 @@ body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
   padding: 30px;
+  height: 100%;
 }
 .comment-list {
   display: flex;
