--- a/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
@@ -35,7 +35,7 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-label>Precio total</mat-label>
+        <mat-label>Precio</mat-label>
         <input type="number" matInput placeholder="precioTotal" formControlName="precioTotal" />
         <mat-error *ngIf="form.get('precioTotal')?.invalid">
           {{
