--- a/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.css
@@ -18,6 +18,8 @@ body {
 .responsive-img {
   max-width: 100%;
   max-height: 200px; /* Set a maximum height if needed */
+  margin-left: 20px;
+  margin-right: 50px;
 }
 .imagen_perfil{
   justify-content: center;
@@ -60,6 +62,7 @@ img {
   height: auto;
   border-radius: 8px;
   margin: 10px;
+  
 }
 
 ul {
