--- a/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.html
@@ -34,7 +34,8 @@
           <div class="row">
             <div class = "imagen_perfil">
               <div class="col-md-6">
-                <img *ngIf="role === 'administrador'" src="https://cdn-icons-png.flaticon.com/512/3135/3135768.png"
+                <img *ngIf="role === 'administrador'" mat-card-image [src]="getImagenUrl()"
+                (error)="imagenNoCargada($event)"
                   alt="Profile Picture" class="responsive-img" />
               </div>
               <div class="col-md-6">
