--- a/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
@@ -55,3 +55,24 @@ button:hover {
 background-color: aquamarine;
 color: #080808;
 }
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.loading-spinner {
+  border: 8px solid rgba(255, 255, 255, 0.3);
+  border-top: 8px solid #fbfbfb;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
