--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -137,7 +137,7 @@
         <button class="boton_registro" mat-raised-button color="primary">
           Registrar
         </button>
-        <button mat-raised-button [routerLink]="[
+        <button  class="boton2" mat-raised-button [routerLink]="[
               '/components/estacionamiento/listar_admin_estacionamientos'
             ]">
           Cancelar
