--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.css
@@ -56,7 +56,10 @@ mat-error {
 button{
   margin: 10px;
 }
-
+.boton2 {
+  background-color: #000000;
+  color: aliceblue;
+}
 /*Responsive y boton lateral..........*/
 .toggle-button {
   display: none;
