--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.html
@@ -51,7 +51,7 @@
         <button class="boton_registro" mat-raised-button color="primary">
           Registrar
         </button>
-        <button mat-raised-button [routerLink]="[
+        <button  class="boton2" mat-raised-button [routerLink]="[
               '/components/horarios_estacionamiento/listar_admin_horarios_estacionamiento'
             ]">
           Cancelar
