--- a/SAFE_PARKING_FRONT/src/app/components/horario/buscar-horario/buscar-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/buscar-horario/buscar-horario.component.html
@@ -30,15 +30,15 @@
     <div class="generic-details" *ngIf="horario">
       <h2 class="generic-heading">Detalles del Horario</h2>
       <div class="generic-box">
-        <h1>hora Apertura</h1>
+        <h1>Hora Apertura</h1>
         <p>{{ horario.horaApertura }}</p>
       </div>
       <div class="generic-box">
-        <h1>hora Cierre</h1>
+        <h1>Hora Cierre</h1>
         <p>{{ horario.horaCierre }}</p>
       </div>
       <div class="generic-box">
-        <h1>fecha</h1>
+        <h1>Fecha</h1>
         <p>{{ horario.fecha }}</p>
       </div>
     </div>
