--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
@@ -103,7 +103,7 @@
       <div class="btn-container">
         <button class="boton_registro" mat-raised-button>Registrar</button>
 
-        <button mat-raised-button [routerLink]="[
+        <button  class="boton2"mat-raised-button [routerLink]="[
               '/components/localizaciones/listar_admin_localizaciones'
             ]">
           Cancelar
