--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.html
@@ -33,7 +33,7 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-label>usuario</mat-label>
+        <mat-label>Usuario</mat-label>
         <mat-select formControlName="usuario">
           <mat-option *ngFor="let p of listaUsuarios" [value]="p.idUsuario">
             {{ p.nombre }}
