--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -63,7 +63,7 @@
 
       <!-- tamanio Column -->
       <ng-container matColumnDef="tamanio">
-        <th mat-header-cell *matHeaderCellDef>Tamanio</th>
+        <th mat-header-cell *matHeaderCellDef>Tamaño</th>
         <td mat-cell *matCellDef="let element">
           {{ element.tamanioVehiculo }}
         </td>
