--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
@@ -7,15 +7,18 @@ body {
   height: 100vh;
 
 }
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.2rem;
+}
 
 .container {
-  margin-bottom: 50px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* Centra horizontalmente */
-  max-width: 100%;
-  margin: 60px;
+  width: 100%;
+  margin: 0;
 }
 
 
@@ -43,13 +46,15 @@ body {
 
 .secciones {
   margin: 15px;
-  width: 380px;
   height: 400px;
   background-color: rgb(221, 221, 221);
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 25px;
+  width: 100%;
+  max-width: 400px; /* Puedes ajustar este valor según sea necesario */
+  margin: 15px auto; 
 }
 
 .image-upload {
@@ -60,9 +65,8 @@ body {
 
 /* Additional styling for the uploaded image */
 img {
-  max-width: 40%;
-  max-height: 40%;
-  margin-top: 10px;
+  max-width: 100%;
+  max-height: auto;
 
 }
 
@@ -100,7 +104,10 @@ button {
   display: none;
   /* Oculta el botón por defecto */
 }
-
+.boton2 {
+  background-color: #000000;
+  color: aliceblue;
+}
 /* Media query para pantallas más pequeñas */
 @media only screen and (max-width: 768px) {
 
