--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
@@ -42,7 +42,10 @@ mat-form-field {
 button {
   margin: 10px;
 }
-
+.btn-container .boton2 {
+  background-color: #000000;
+  color: aliceblue;
+}
 /*Responsive y boton lateral..........*/
 .toggle-button {
   display: none;
