--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
@@ -60,11 +60,11 @@
       <br />
       <div class="btn-container">
         <button class="boton_registro" mat-raised-button>Registrar</button>
-        <button *ngIf="role === 'administrador'" mat-raised-button
+        <button  class="boton2"*ngIf="role === 'administrador'" mat-raised-button
           [routerLink]="['/components/horarios/listar_admin_horarios']">
           Cancelar
         </button>
-        <button *ngIf="role === 'arrendador'" mat-raised-button
+        <button  class="boton2" *ngIf="role === 'arrendador'" mat-raised-button
           [routerLink]="['/components/horarios/listar_usuario_horarios']">
           Cancelar
         </button>
