--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
@@ -96,6 +96,10 @@ mat-error {
 button{
   margin: 10px;
 }
+.boton2 {
+  background-color: #000000;
+  color: aliceblue;
+}
 
 /*Responsive y boton lateral..........*/
 .toggle-button {
