--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -26,7 +26,7 @@
       <br />
 
       <mat-form-field class="example-full-width">
-        <mat-label>Descripcion </mat-label>
+        <mat-label>Descripción </mat-label>
         <input matInput placeholder="Descripcion" formControlName="descripcion" />
         <mat-error *ngIf="form.get('descripcion')?.invalid">
           {{
@@ -49,7 +49,7 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-label>usuarios</mat-label>
+        <mat-label>Usuario</mat-label>
         <mat-select formControlName="usuario">
           <mat-option *ngFor="let p of listaUsuarios" [value]="p.idUsuario">
             {{ p.nombre }}
@@ -66,13 +66,13 @@
           Registrar
         </button>
 
-        <button *ngIf="role === 'conductor'" mat-raised-button [routerLink]="['/components/home_conductor']">
+        <button class="boton2" *ngIf="role === 'conductor'" mat-raised-button [routerLink]="['/components/home_conductor']">
           Cancelar
         </button>
-        <button *ngIf="role === 'arrendador'" mat-raised-button [routerLink]="['/components/home_arrendador']">
+        <button class="boton2" *ngIf="role === 'arrendador'" mat-raised-button [routerLink]="['/components/home_arrendador']">
           Cancelar
         </button>
-        <button *ngIf="role === 'administrador'" mat-raised-button
+        <button class="boton2" *ngIf="role === 'administrador'" mat-raised-button
           [routerLink]="['/components/incidentes/listar_admin_incidentes']">
           Cancelar
         </button>
