--- a/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
@@ -73,7 +73,7 @@
         <button class="boton_registro" mat-raised-button color="primary">
           Registrar
         </button>
-        <button mat-raised-button [routerLink]="['/components/pagos/listar-admin-pagos']">
+        <button  class="boton2" mat-raised-button [routerLink]="['/components/pagos/listar-admin-pagos']">
           Cancelar
         </button>
       </div>
