--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.html
@@ -71,7 +71,7 @@
       </ng-container>
 
       <ng-container matColumnDef="accion01">
-        <th mat-header-cell *matHeaderCellDef>editar</th>
+        <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let element">
           <button class="botoncito1" mat-raised-button [routerLink]="['ediciones', element.idPago]">
             <mat-icon>edit</mat-icon>
