--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol-admin/creaedita-rol-admin.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol-admin/creaedita-rol-admin.component.css
@@ -42,7 +42,10 @@ button {
     background-color: #11998e;
     color: #fff;
 }
-
+.boton2 {
+  background-color: #000000;
+  color: aliceblue;
+}
 /*Responsive y boton lateral..........*/
 .toggle-button {
     display: none;
