--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-usuario-vehiculos/listar-usuario-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-usuario-vehiculos/listar-usuario-vehiculos.component.html
@@ -36,7 +36,7 @@
             </p>
           </mat-card-title>
           <mat-card-subtitle>
-            {{ "detalle de vehiculo" }}
+            {{ "Detalle del vehiculo" }}
           </mat-card-subtitle>
         </mat-card-header>
 
