--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/modificar-usuario/modificar-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/modificar-usuario/modificar-usuario.component.css
@@ -57,9 +57,8 @@ button {
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  padding: 25px;
-  width: 100%;
-  max-width: 400px; /* Puedes ajustar este valor según sea necesario */
+  width: 400px;
+  max-width: 100%;
   margin: 15px auto; /* Centra horizontalmente */
 }
 .sub-seccion {
