--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
@@ -20,10 +20,13 @@ h2 {
   width: 100%;
   margin: 0;
 }
+mat-form-field {
+  width: 100%;
+}
 
 
 .example-form {
-  max-width: 100%;
+  width: 100%;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -51,9 +54,8 @@ h2 {
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  padding: 25px;
-  width: 100%;
-  max-width: 400px; /* Puedes ajustar este valor según sea necesario */
+  width: 400px;
+  max-width: 100%;
   margin: 15px auto; 
 }
 
