--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.css
@@ -61,7 +61,7 @@ body {
 }
 
 .membership-item {
-  background: linear-gradient(135deg, #1d1d1d, #9e9e9e);
+  background: linear-gradient(to right, #232526, #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 10px;
   padding: 10px;
   height: 350px;
@@ -86,7 +86,7 @@ body {
 
 .tipo_membresia h3 {
   font-size: 30px;
-  color: #5cffa5;
+  color: #38ef7d;
 
 }
 
@@ -129,10 +129,14 @@ body {
 /* Hover effect for membership items */
 .membership-item:hover {
   background-color: #e0e0e0;
-  transform: translateY(-2px);
+  transform: translateY(-50px);
   transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 10px 20px black;
+  background: linear-gradient(to right, #000000, #434343); 
 }
-
+.membership-item:hover h3 {
+  color: #5cffa5; /* Cambia #nuevo-color al color que desees al hacer hover */
+}
 /* New styles */
 
 
@@ -148,6 +152,7 @@ body {
 
 .membership-list a:hover {
   background-color: #f5f5f5;
-  transform: translateY(-2px);
+  transform: translateY(-50px);
   transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 10px 40px black;
 }
