--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
@@ -38,14 +38,13 @@ h2 {
 
 .secciones {
   margin: 15px;
-  height: 400px;
+  height: 500px;
   background-color: rgb(221, 221, 221);
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  padding: 25px;
-  width: 100%;
-  max-width: 400px; /* Puedes ajustar este valor según sea necesario */
+  width: 400px;
+  max-width: 100%;
   margin: 15px auto; /* Centra horizontalmente */
 }
 
